--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-mayavi2 (4.4.1-1+c9+1) calibre9; urgency=low
+mayavi2 (4.4.1-1scibian1) jessie; urgency=low
 
-  * New upstream version.
+  * New upstream update
 
- -- Alexis Bezverkhyy <alexis-externe.bezverkhyy@edf.fr>  Tue, 19 May 2015 11:17:22 +0200
+ -- Scibian Packaging Team <packaging@scibian.org>  Wed, 07 Sep 2016 14:19:42 +0200
 
 mayavi2 (4.3.1-3.1) unstable; urgency=medium
 
